<resources>
    <string name="app_name">Football Match</string>
    <string name="prev_match">Matches</string>
    <string name="favorites">Favorites</string>
    <string name="next_match">Teams</string>
    <string name="remove_favorite">Removed to favorite</string>
    <string name="add_favorite">Added to favorite</string>
    <string name="tanggal">tanggal</string>
    <string name="name_club_home">Name club home</string>
    <string name="vs">vs</string>
    <string name="name_club_away">Name club away</string>
    <string name="name_goal">nama goal</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="data_test">data test</string>
    <string name="type_last_match">type last match</string>
    <string name="type_next_match">type next match</string>
    <string name="image">image</string>
    <string name="home_score">home score</string>
    <string name="away_score">away score</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="isi_weight">65.76</string>
    <string name="isi_height">1.68</string>
    <string name="forward">Forward</string>
    <string name="name_team">name team</string>
    <string name="years_team">years team</string>
    <string name="stadion">stadion</string>
</resources>
