<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/swpDetail"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            >

            <TextView
                android:id="@+id/tvTanggal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tanggal"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/ivImageHomeScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/home_score"
                        />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/tvNameHomeClub"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/name_club_home"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvScoreHome"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="35sp"
                        tools:text="3"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="22sp"
                        android:textColor="@color/gray"
                        android:text="@string/vs"
                        />

                    <TextView
                        android:id="@+id/tvScoreAway"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="35sp"
                        android:textColor="@color/gray"
                        tools:text="5"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/ivImageAwayScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/away_score"
                        />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/tvNameAwayClub"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/name_club_away"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvGoalHomeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/name_goal"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goals"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvGoalAwayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/name_goal"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvScoreShotHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="4"
                    android:gravity="left"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shots"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvScoreShotAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    tools:text="1"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lineups"
                android:gravity="center"
                android:textColor="@color/gray"
                android:textSize="17sp"
                />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvGoalKeeperHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_keeper"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvGoalKeeperAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvDefenseHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvDefenseAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvMidFieldHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvMidFieldAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvForwardHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forward"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvForwardAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvSubtitutesHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitutes"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tvSubtitutesAway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_test"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    />

            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.v4.widget.SwipeRefreshLayout>