<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        >
        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="30dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="50dp"
                    app:layout_collapseParallaxMultiplier="0.7"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/expandedImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image"
                        android:src="@color/white"
                        />
                    <TextView
                        android:id="@+id/tvNameClub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_team"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tvYears"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/years_team"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stadion"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />

                </LinearLayout>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_team"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    />

                <android.support.design.widget.TabLayout
                    android:id="@+id/htab_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:tabIndicatorColor="@android:color/white"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabTextColor="@color/white_transparent"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/htab_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</android.support.design.widget.CoordinatorLayout>
